--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
             </div>
 
             <div class="player">
-                <div class="player__pause">
-
+                <div class="play">
+                    <img class = "img__src" src="public/play.svg" width="50px" height="50px">
                 </div>
 
                 <div class="player__inner">
                     <p class="song">The Three Little Pigs</p>
+
+                    <audio class="audio" src="./public/pigs.mp3"></audio>
 
                     <div class="progress__container">
                         <div class="progress"></div>
