--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
                     <div class="progress__container">
                         <div class="progress"></div>
+                        <div class="progress__duration"></div>
                     </div>
                 </div>
             </div>
