--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     <div class="progress__container">
                         <div class="progress"></div>
-                        <div class="progress__duration"></div>
+                        <div class="progress__duration">00:00/3:05</div>
                     </div>
                 </div>
             </div>
