--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
                     <div class="progress__container">
                         <div class="progress"></div>
-                        <div class="progress__duration">00:00/3:05</div>
                     </div>
+
+                    <p class="progress__duration">00:00/3:05</p>
                 </div>
             </div>
 
