--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                         <div class="progress"></div>
                     </div>
 
-                    <p class="progress__duration">00:00/3:05</p>
+                    <div class="progress__duration">
+                        <span class="current">00:00</span>
+                        <span>/</span>
+                        <span class="duration">3:05</span>
+                    </div>
                 </div>
             </div>
 
