--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="image/x-icon" href="public/favicon.png" rel="shortcut icon">
     <link rel="stylesheet" href="css/style.css?v=1">
-    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/mobile.css?v=1">
     <title>Lucy&Leo Educational Puzzles</title>
 </head>
 <body>
