--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="main__inner">
-                <h1>Lucy&Leo Puzzle!!!!!!!!!!!</h1>
+                <h1>Lucy&Leo Puzzle</h1>
                 <p>The Three Little Pigs</p>
             </div>
 
