--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Lucy&Leo Educational Puzzles</title>
 </head>
 <body>
-    <main>
+    <main unselectable="on">
         <div class="main__wrapper">
             <div class="main__wrapper-img">
                 <img src="public/Pigs.png">
